crates/fe/tests/fixtures/cli_output/ingots/file_scope.snap
---
source: crates/fe/tests/cli_output.rs
expression: output
---
=== STDERR ===
error[8-0013]: returned type mismatch
  ┌─ src/bad.fe:2:5
  │
1 │ pub fn bad() -> u256 {
  │                 ---- this function expects `u256` to be returned
2 │     return true
  │     ^^^^^^^^^^^ expected `u256`, but `bool` is returned

=== EXIT CODE: 1 ===
